crates/reinhardt-pages/tests/ui/page/fail/boolean_attr_string_other.rs
//! page! macro with boolean attribute having arbitrary string literal

use reinhardt_pages::page;

fn main() {
	let _invalid = page!(|| {
		button {
			disabled: "disabled",
			"Submit"
		}
	});
}
